--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>Test 2</title>
 </head>
 <body>
-    <header class="hd">
-        <nav>
+    <header>
+      <div class="hdclass">
+        <nav class="nav1">
           <ul class="headerlist">
             <li class="lipic"><a href="index.html"><img src="./images/Group 39708.svg" alt="image1"></a></li>
-            <li class="liclass"><a href="#">Home</a></li>
+            <li class="liclass liclass1"><a href="index.html">Home</a></li>
             <li class="liclass"><a href="#">About</a></li>
             <li class="liclass"><a href="#">Places</a></li>
             <li class="liclass"><a href="#">Careers</a></li>
@@ -22,6 +23,23 @@
             <li><a href="#"><div class="firstbutton">Connect</div></a></li>
           </ul>
         </nav>
+      </div>  
     </header>
+    <section>
+      <div class="pirveliseqcia">
+          <div class="cover"></div>
+          <img src="./images/lalo-hernandez-Amo081zdJsI-unsplash.jpg" alt="background">
+          <div class="firstrelative"><h2 class="firsth2">Travel To explore</h2><br><p class="firstp">Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ultricies Mi Eget Mauris </p></div>
+          <div class="sectionbox">
+               <div class="location"><h3 class="firsth3">Where You Want to go</h3> <br> <img src="./images/Icon ionic-ios-search.svg" alt="lupa"> <p class="firstpp"> Search your Location</p></div>
+               <div class="splitter"></div>
+               <div class="adddate"><h3 class="firsth3">Check-in</h3> <br> <p class="firstpp"> Add Date</p> </div>
+               <div class="splitter2"></div>
+               <div class="checkout"><h3 class="firsth3">Check-out </h3> <br> <p class="firstpp">Add Date</p></div>
+               <a href="#"><div class="button1">Explore Now</div></a>
+
+          </div>
+      </div>
+    </section>
 </body>
 </html>
