--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
                <div class="splitter2"></div>
                <div class="checkout"><h3 class="firsth3">Check-out </h3> <br> <p class="firstpp">Add Date</p></div>
                <a href="#"><div class="button1">Explore Now</div></a>
-
           </div>
+      </div>
+    </section>
+    <section>
+      <div class="meoreseqcia">
+        <div class="fourboxes">
+            <div class="box1"><div class="insidebox1"><img src="./images/Get Best Prices.svg" alt="getbestprices"> <h2 class="satauri1"> Get Best Prices </h2> <br> <p class="satauri2">Pay through our application and save thousands and get amazing rewards </p></div></div>
+            <div class="box2"><div class="insidebox2"><img src="./images/Covid Safe.svg" alt="Covid"><h2 class="satauri1">Covid Safe</h2><br><p class="satauri2">We have all the curated hotels that have all the precaution for a corvid safe environment</p></div></div>
+        </div>
+
       </div>
     </section>
 </body>
