--- a/index.html
+++ b/index.html
@@ -43,11 +43,26 @@
     <section>
       <div class="meoreseqcia">
         <div class="fourboxes">
-            <div class="box1"><div class="insidebox1"><img src="./images/Get Best Prices.svg" alt="getbestprices"> <h2 class="satauri1"> Get Best Prices </h2> <br> <p class="satauri2">Pay through our application and save thousands and get amazing rewards </p></div></div>
-            <div class="box2"><div class="insidebox2"><img src="./images/Covid Safe.svg" alt="Covid"><h2 class="satauri1">Covid Safe</h2><br><p class="satauri2">We have all the curated hotels that have all the precaution for a corvid safe environment</p></div></div>
+            <div class="box1"><div class="insidebox1"><div class="greybox1"><img src="./images/Get Best Prices.svg" alt="getbestprices"></div> <h2 class="satauri1"> Get Best Prices </h2> <br> <p class="satauri2">Pay through our application and save thousands and get amazing rewards </p></div></div>
+            <div class="box2"><div class="insidebox2"><div class="greybox2"><img src="./images/Covid Safe.svg" alt="Covid"></div><h2 class="satauri1">Covid Safe</h2><br><p class="satauri2">We have all the curated hotels that have all the precaution for a corvid safe environment</p></div></div>
+            <div class="box3"><div class="insidebox3"><div class="greybox3"><img src="./images/card.svg" alt="card"></div><h2 class="satauri1">Flexible Payment</h2><br><p class="satauri2">Enjoy the flexible payment through our app and get rewards on every payment </p></div></div>
+            <div class="box4"><div class="insidebox4"><div class="greybox4"><img src="./images/location.svg" alt="location"></div><h2 class="satauri1">Find The Best Near You</h2><br><p class="satauri2">Find the best hotels and places to visit near you in a single click </p></div></div>
         </div>
-
       </div>
+    <section>
+       <div class="mesameseqcia">
+             <div class="recpad"><h2 class="rekomendacia">Recommended Destination</h2></div>
+             <div class="chamonatvali">
+                   <ul class="chamonatvalissia">
+                      <li><a href="#">The Weekend Break</a></li>
+                      <li><a href="#">The Package Holiday</a></li>
+                      <li><a href="#">The Group Tour</a></li>
+                      <li><a href="#">Long Term Slow Travel</a></li>
+                   </ul>
+             </div>
+
+       </div>
+    </section>
     </section>
 </body>
 </html>
