--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
                       <li><a href="#">Long Term Slow Travel</a></li>
                    </ul>
              </div>
+             <div class="cities">
+                <div class="city1"><img src="images/Singapore.jpg" alt="singapore"><h2 class="cityname1">Singapore</h2><br><p class="cityname2">Singapore, officially the Republic of Singapore, is a sovereign island city-state in maritime Southeast Asia.</p>
+                <img src="images/Group 19.svg" alt="hotels"><img src="/images/Group 18.svg" alt="">
+                </div>
+                
 
+
+             </div>
        </div>
     </section>
     </section>
