--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
       <div class="pirveliseqcia">
           <div class="cover"></div>
-          <img src="./images/lalo-hernandez-Amo081zdJsI-unsplash.jpg" alt="background">
+          <img class="bigbanner" src="./images/lalo-hernandez-Amo081zdJsI-unsplash.jpg" alt="background">
           <div class="firstrelative"><h2 class="firsth2">Travel To explore</h2><br><p class="firstp">Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ultricies Mi Eget Mauris </p></div>
           <div class="sectionbox">
                <div class="location"><h3 class="firsth3">Where You Want to go</h3> <br> <img src="./images/Icon ionic-ios-search.svg" alt="lupa"> <p class="firstpp"> Search your Location</p></div>
