--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
       <div class="pirveliseqcia">
           <div class="cover"></div>
-          <img class="bigbanner" src="./images/lalo-hernandez-Amo081zdJsI-unsplash.jpg" alt="background">
+          <img src="./images/lalo-hernandez-Amo081zdJsI-unsplash.jpg" alt="background">
           <div class="firstrelative"><h2 class="firsth2">Travel To explore</h2><br><p class="firstp">Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ultricies Mi Eget Mauris </p></div>
           <div class="sectionbox">
                <div class="location"><h3 class="firsth3">Where You Want to go</h3> <br> <img src="./images/Icon ionic-ios-search.svg" alt="lupa"> <p class="firstpp"> Search your Location</p></div>
@@ -62,11 +62,13 @@
              </div>
              <div class="cities">
                 <div class="city1"><img src="images/Singapore.jpg" alt="singapore"><h2 class="cityname1">Singapore</h2><br><p class="cityname2">Singapore, officially the Republic of Singapore, is a sovereign island city-state in maritime Southeast Asia.</p>
-                <img src="images/Group 19.svg" alt="hotels"><img src="/images/Group 18.svg" alt="">
+                <div class="warwera"><img class="pataraiconebi" src="images/Group 19.svg" alt="hotels"><img class="pataraiconebi" src="images/Group 18.svg" alt="sachmeli"> <img class="pataraiconebi" src="images/Group 17.svg" alt="tvitmfrinavi"> <p class="lari">₾38,000</p></div>
+                <div class="dro"><p class="km">1000 Kms</p> <p class="night">Approx 2 night trip</p></div>
                 </div>
-                
+                <div class="city2">
 
-
+                  
+                </div>
              </div>
        </div>
     </section>
